# findmy-cenote

./: .gitignore  README.md  SOURCES.md  dashboard.html  index.html  pyproject.toml
data/: canopy_overlay_bounds.json  dem_overlay_bounds.json  lineament_density_bounds.json  lineaments_display.json  ndvi_overlay_bounds.json  roads.json
design/: dashboard-brief.md
scripts/: build_unified_dataset.py  grid_utils.py
scripts/download/: download_5m_tiles.py  download_all_subtiles.py  download_inegi_cem.py  list_inegi_tiles.py
scripts/features/: analyze_cenote_terrain.py  calc_canopy_height.py  calc_curvature.py  calc_hydrology.py  calc_ndvi_anomaly.py  calc_neighbors.py  calc_population.py  calc_thermal.py  extract_lineaments.py
scripts/overlays/: generate_canopy_overlay.py  generate_dem_overlay.py  generate_lineament_density.py  generate_ndvi_overlays.py
